Implement generic node filtering. Added the NodeFilter interface and the filter package. Sideline tag specific scanners; tags now use only one scanner of each type, TagScanner or CompositeTagScanner (except for ScriptScanner). Obviated PeekingIterator by moving the META tag semantics to doSemanticAction, much simpler, old IteratorImpl is now PeekingIteratorImpl but deprecated.

--- a/build.xml
+++ b/build.xml
@@ -261,6 +261,7 @@ HTML Parser Integration Release 1.4-20030824
       <include name="org/htmlparser/lexer/**/*.class"/>
       <include name="org/htmlparser/AbstractNode.class"/>
       <include name="org/htmlparser/Node.class"/>
+      <include name="org/htmlparser/NodeFilter.class"/>
       <include name="org/htmlparser/util/ParserException.class"/>
       <include name="org/htmlparser/util/ChainedException.class"/>
       <include name="org/htmlparser/util/NodeList*.class"/>
@@ -268,6 +269,7 @@ HTML Parser Integration Release 1.4-20030824
       <include name="org/htmlparser/util/SimpleNodeIterator.class"/>
       <include name="org/htmlparser/util/SpecialHashtable.class"/>
       <include name="org/htmlparser/util/LinkProcessor.class"/>
+      <include name="org/htmlparser/util/Translate.class"/>
       <include name="org/htmlparser/util/sort/**/*.class"/>
       <include name="org/htmlparser/parserHelper/SpecialHashtable.class"/>
       <manifest>
