--- a/build.xml
+++ b/build.xml
@@ -105,10 +105,13 @@ HTML Parser Integration Release 1.4-20030824
       </condition>
   </target>
 
+  <target name="JDK_Warning" unless="JDK1.4">
+    <echo message="***************************************************"/>
+    <echo message="*  WARNING: The detected JDK version is not 1.4!  *"/>
+    <echo message="***************************************************"/>
+  </target>
+  
   <target name="init" description="initialize version properties">
-    <echo message="**********************************"/>
-    <echo message="*  Initializing.....             *"/>
-    <echo message="**********************************"/>
     <tstamp>
       <format property="TODAY" pattern="yyyyMMdd" locale="en"/>
       <format property="TODAY_STRING" pattern="MMM dd, yyyy"/>
@@ -147,10 +150,6 @@ HTML Parser Integration Release 1.4-20030824
   </target>
 
   <target name="versionSource" depends="init" description="update the version in all java files">
-    <echo message="**********************************"/>
-    <echo message="*  Incorporating version info    *"/>
-    <echo message="**********************************"/>
-
     <echo message="Replacing version VERSION_NUMBER = ${VERSION_NUMBER} with VERSION_NUMBER = ${versionNumber} in ${src}/org/htmlparser/Parser.java"/>
     <replace file="${src}/org/htmlparser/Parser.java" token="VERSION_NUMBER = ${VERSION_NUMBER}" value="VERSION_NUMBER = ${versionNumber}"/>
 
@@ -193,9 +192,6 @@ HTML Parser Integration Release 1.4-20030824
       password prompts:
       $ ssh -l derrickoswald shell.sourceforge.net
     -->
-    <echo message="**********************************"/>
-    <echo message="*  Creating change log           *"/>
-    <echo message="**********************************"/>
     <echo message="${resources}/cvs2cl.pl --no-wrap --separate-header -l &quot;-d'&gt;${VERSION_DATE}'&quot;"/>
     <exec executable="${resources}/cvs2cl.pl">
       <arg value="--no-wrap"/>
@@ -206,18 +202,10 @@ HTML Parser Integration Release 1.4-20030824
   </target>
 
   <target name="compile" description="compile all java files">
-    <echo message="**********************************"/>
-    <echo message="*  Compiling....                 *"/>
-    <echo message="**********************************"/>
-
-    <!-- Compile the java code in ${src} -->
     <javac srcdir="${src}" includes="org/htmlparser/**" excludes="org/htmlparser/tests/**,org/htmlparser/util/Generate.java" debug="on" classpath="src:${commons-logging.jar}"/>
   </target>
 
   <target name="compilelexer" description="compile lexer java files">
-    <echo message="**********************************"/>
-    <echo message="*  Compiling lexer....           *"/>
-    <echo message="**********************************"/>
     <javac srcdir="${src}" debug="on" classpath="src:${commons-logging.jar}" target="1.1">
       <include name="org/htmlparser/lexer/**/*.java"/>
       <include name="org/htmlparser/AbstractNode.java"/>
@@ -233,13 +221,11 @@ HTML Parser Integration Release 1.4-20030824
   </target>
 
   <target name="compileparser" depends="compilelexer" description="compile parser java files">
-    <echo message="**********************************"/>
-    <echo message="*  Compiling parser....          *"/>
-    <echo message="**********************************"/>
     <javac srcdir="${src}" debug="on" classpath="src:${commons-logging.jar}">
       <include name="org/htmlparser/**/*.java"/>
       <exclude name="org/htmlparser/tests/**"/>
       <exclude name="org/htmlparser/util/Generate.java"/> 
+      <exclude name="org/htmlparser/lexerapplications/**/*.java"/>
     </javac>
   </target>
 
@@ -248,14 +234,7 @@ HTML Parser Integration Release 1.4-20030824
 
   <!-- Create the distribution of htmllexer.jar -->
   <target name="jarlexer" depends="compilelexer" description="create htmllexer.jar">
-    <!-- Create the distribution directory -->
     <mkdir dir="${lib}"/>
-
-    <echo message="**********************************"/>
-    <echo message="*  Creating htmllexer.jar....   *"/>
-    <echo message="**********************************"/>
-
-    <!-- Put classes and images into the htmllexer.jar file -->
     <jar jarfile="${lib}/htmllexer.jar"
       basedir="${src}">
       <include name="org/htmlparser/lexer/**/*.class"/>
@@ -281,14 +260,7 @@ HTML Parser Integration Release 1.4-20030824
 
   <!-- Create the distribution of htmlparser.jar -->
   <target name="jarparser" depends="compileparser" description="create htmlparser.jar">
-    <!-- Create the distribution directory -->
     <mkdir dir="${lib}"/>
-
-    <echo message="**********************************"/>
-    <echo message="*  Creating htmlparser.jar....   *"/>
-    <echo message="**********************************"/>
-
-    <!-- Put classes and images into the htmlparser.jar file -->
     <jar jarfile="${lib}/htmlparser.jar"
       basedir="${src}"
       includes="**/*.class **/*.gif"
@@ -318,11 +290,6 @@ HTML Parser Integration Release 1.4-20030824
   <target name="thumbelina" depends="JDK1.4,jarlexer" description="create thumbelina.jar" if="JDK1.4">
     <!-- Create the distribution directory -->
     <mkdir dir="${lib}"/>
-
-    <echo message="**********************************"/>
-    <echo message="*  Creating thumbelina.jar....   *"/>
-    <echo message="**********************************"/>
-
     <javac compiler="javac1.4" srcdir="${src}" debug="on" classpath="src:${lib}/htmllexer.jar">
       <include name="org/htmlparser/lexerapplications/thumbelina/**/*.java"/>
     </javac>
@@ -340,9 +307,6 @@ HTML Parser Integration Release 1.4-20030824
   
   <!-- Run the unit tests -->
   <target name="test" depends="jar" description="run the JUnit tests">
-    <echo message="**********************************"/>
-    <echo message="*  Running unit tests....        *"/>
-    <echo message="**********************************"/>
     <javac srcdir="${src}" includes="org/htmlparser/tests/**" debug="on">
       <classpath>
         <pathelement location="src"/>
@@ -362,27 +326,16 @@ HTML Parser Integration Release 1.4-20030824
   </target>
 
   <!-- Create the javadoc for the project -->
-  <target name="javadoc" depends="init" description="create JavaDoc (API) documentation">
-    <echo message="**********************************"/>
-    <echo message="*  Generating Javadoc....        *"/>
-    <echo message="**********************************"/>
-
-    <!-- Create the javadoc directory -->
+  <target name="javadoc" depends="JDK1.4,JDK_Warning,init" description="create JavaDoc (API) documentation">
+    <javac srcdir="${resources}" includes="HtmlTaglet.java" classpath="${src}"/>
     <mkdir dir="${docs}/javadoc"/>
-    
-    <property name="javadoc.doctitle" value="&lt;h1>HTML Parser ${versionNumber}&lt;/h1>"/>
+    <property name="javadoc.doctitle" value="HTML Parser ${versionNumber}"/>
     <property name="javadoc.header" value="&lt;A HREF=&quot;http://htmlparser.sourceforge.net&quot; target=&quot;_top&quot;>HTML Parser Home Page&lt;/A>"/>
     <property name="javadoc.footer" value="&amp;copy; 2003 Somik Raha&lt;div align=&quot;right&quot;&gt;${TODAY_STRING}&lt;/div&gt;"/>
     <property name="javadoc.bottom" value="HTML Parser is an open source library released under
-    &lt;A HREF=&quot;http://www.opensource.org/licenses/lgpl-license.html&quot;&gt;LGPL&lt;/A&gt;.&lt;BR&gt;
-    If you want to be notified when new releases of HTML Parser are available, join the
-    &lt;A HREF=&quot;http://lists.sourceforge.net/lists/listinfo/htmlparser-announce&quot;&gt;HTML Parser Announcement List&lt;/A&gt;.&lt;BR&gt;
-    If you have questions about the usage of the parser, join the
-    &lt;A HREF=&quot;http://lists.sourceforge.net/lists/listinfo/htmlparser-user&quot;&gt;HTML Parser User List&lt;/A&gt;.&lt;BR&gt;
-    If you want to join as a developer, please sign up on the
-    &lt;A HREF=&quot;http://lists.sourceforge.net/lists/listinfo/htmlparser-developer&quot;&gt;HTML Parser Developer List&lt;/A&gt;.&lt;BR&gt;
-    &lt;div align=&quot;right&quot;&gt;&lt;A HREF=&quot;http://sourceforge.net/projects/htmlparser&quot;&gt;&lt;img src=&quot;http://sourceforge.net/sflogo.php?group_id=24399&amp;type=1&quot; width=&quot;88&quot; height=&quot;31&quot; border=&quot;0&quot; alt=&quot;SourceForge.net Logo&quot;&gt;&lt;/A&gt;&lt;/div&gt;"/>
-
+    &lt;A HREF=&quot;http://www.opensource.org/licenses/lgpl-license.html&quot; target=&quot;_top&quot;&gt;LGPL&lt;/A&gt;.&lt;BR&gt;
+    &lt;div align=&quot;right&quot;&gt;&lt;A HREF=&quot;http://sourceforge.net/projects/htmlparser&quot; target=&quot;_top&quot;&gt;
+    &lt;img src=&quot;http://sourceforge.net/sflogo.php?group_id=24399&amp;type=1&quot; width=&quot;88&quot; height=&quot;31&quot; border=&quot;0&quot; alt=&quot;SourceForge.net&quot;&gt;&lt;/A&gt;&lt;/div&gt;"/>
     <javadoc packagenames="org.htmlparser.*"
            sourcepath="${src}"
            classpath="src:${commons-logging.jar}"
@@ -392,11 +345,14 @@ HTML Parser Integration Release 1.4-20030824
            author="true"
            version="true"
            use="true"
-           windowtitle="HTML Parser ${versionNumber}">
+           windowtitle="HTML Parser ${versionNumber}"
+           stylesheetfile="${resources}/stylesheet.css"
+           overview="${src}/doc-files/overview.html">
       <doctitle>${javadoc.doctitle}</doctitle>
       <header>${javadoc.header}</header>
       <bottom>${javadoc.bottom}</bottom>
       <footer>${javadoc.footer}</footer>
+      <taglet name="HtmlTaglet" path="${resources}:${src}"/>
       <group title="Main Package" packages="org.htmlparser"/>
       <group title="Example Applications" packages="org.htmlparser.parserapplications"/>
       <group title="Tags" packages="org.htmlparser.tags,org.htmlparser.tags.data"/>
@@ -405,7 +361,9 @@ HTML Parser Integration Release 1.4-20030824
       <group title="Beans" packages="org.htmlparser.beans"/>
       <group title="Visitors" packages="org.htmlparser.visitors"/>
       <group title="Utility Packages (of developer interest only)" packages="org.htmlparser.util,org.htmlparser.util.sort"/>
-    </javadoc>         
+      <link href="http://java.sun.com/j2se/1.4.2/docs/api/"/>
+    </javadoc>
+    <delete file="${resources}/HtmlTaglet.class"/>
   </target>
 
   <target name="Release" depends="versionSource,jar,thumbelina,javadoc" description="prepare the release files">
@@ -414,10 +372,6 @@ HTML Parser Integration Release 1.4-20030824
   <!-- Package the release -->
   <target name="Package" depends="Release,sources"
     description="glom the release and source files into the distribution zip file">
-    <echo message="**********************************"/>
-    <echo message="*  Packaging....                 *"/>
-    <echo message="**********************************"/>
-
     <mkdir dir="${distribution}"/>
     <zip zipfile="${distribution}/htmlparser${versionTag}.zip">
       <zipfileset dir="${bin}" prefix="htmlparser${versionQualifier}/${bin}"/>
@@ -431,10 +385,6 @@ HTML Parser Integration Release 1.4-20030824
   
   <!-- Prepare the sources zip, allowing folks to build the code -->
   <target name="sources" description="create the source zip">
-    <echo message="**********************************"/>
-    <echo message="*  Preparing Sources....         *"/>
-    <echo message="**********************************"/>
-
     <zip destfile="src.zip" defaultexcludes="no">
       <zipfileset dir="${src}" prefix="${src}" includes="**/*.java **/*.html **/*.gif **/*.form **/*.properties"/>
       <zipfileset dir="." includes="build.xml"/>
@@ -444,10 +394,6 @@ HTML Parser Integration Release 1.4-20030824
   </target>
 
   <target name="clean" description="cleanup">
-    <echo message="**********************************"/>
-    <echo message="*  Cleaning up....               *"/>
-    <echo message="**********************************"/>
-
     <!-- delete the src.zip, classes and javadocs leave the jars -->
     <delete>
       <fileset dir="." includes="src.zip"/>
