--- a/build.xml
+++ b/build.xml
@@ -236,6 +236,7 @@ HTML Parser Integration Release 1.4-20040104
       <include name="org/htmlparser/util/SpecialHashtable.class"/>
       <include name="org/htmlparser/util/LinkProcessor.class"/>
       <include name="org/htmlparser/util/Translate.class"/>
+      <include name="org/htmlparser/util/EncodingChangeException.class"/>
       <include name="org/htmlparser/util/sort/**/*.class"/>
       <include name="org/htmlparser/parserHelper/SpecialHashtable.class"/>
       <manifest>
