Rework character entity translation. See task 58599  enhance character reference translation. Decode now handles missing semi colons, encoding is more efficient, hexadecimal numeric character entity references are handled and both encoding and decoding make minimal use of substring(). Augmented the tests in CharacterTranslationTest significantly, and merged the Generate class into the tests. Added translate command scripts in bin, which read from stdin and write to stdout.

--- a/build.xml
+++ b/build.xml
@@ -300,6 +300,7 @@ HTML Parser Integration Release 1.4-20040104
         <pathelement location="src"/>
         <pathelement location="${junit.jar}"/>
         <pathelement location="${commons-logging.jar}"/>
+        <pathelement location="${java.home}/../lib/tools.jar"/>
       </classpath>
     </javac>
     <java classname="org.htmlparser.tests.AllTests" fork="yes" failonerror="yes">
@@ -308,6 +309,7 @@ HTML Parser Integration Release 1.4-20040104
         <pathelement location="${src}"/>
         <pathelement location="${junit.jar}"/>
         <pathelement location="${commons-logging.jar}"/>
+        <pathelement location="${java.home}/../lib/tools.jar"/>
       </classpath>
       <arg value="-text"/>
     </java>
